<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.dice-research</groupId>
	<artifactId>sask</artifactId>
	<version>0.0.7</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.8.RELEASE</version>
	</parent>

	<modules>
		<module>eureka-server</module>
		<module>discoveryclient</module>
		<module>webclient</module>
		<module>fox-ms</module>
		<module>fred-ms</module>
		<module>chatbot</module>
	</modules>

	<properties>
		<!-- ~~~~~~~ general ~~~~~~~ -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<!-- ~~~~~~~ spring ~~~~~~~ -->
		<spring.test.version>1.5.8.RELEASE</spring.test.version>
		<spring.cloud.version>1.3.0.RELEASE</spring.cloud.version>
		<spring.boot.version>1.5.8.RELEASE</spring.boot.version>
	</properties>

	<dependencies>
		<!-- ~~~~~~~ spring test ~~~~~~~ -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring.test.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- ~~~~~~~ spring cloud ~~~~~~~ -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter</artifactId>
			<version>${spring.cloud.version}</version>
		</dependency>
		<!-- ~~~~~~~ spring boot ~~~~~~~ -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- ~~~~~~~ spring boot ~~~~~~~ -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<!-- ~~~~~~~ support java 9 ~~~~~~~ -->
					<!-- https://blog.frankel.ch/migrating-to-java-9/1/ -->
					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Camden.SR5</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
